<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupORSignIn">
    <ImageView
        android:id="@+id/foodimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/food"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/healthlogo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="112dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="446dp"
        android:src="@drawable/circle"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="169dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/text1"
        android:layout_width="208dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="245dp"
        android:textColor="@color/white"
        android:text="@string/you_don_t_have_to_eat_less_you_just_have_to_eat_right"
        android:lines="3"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:background="@drawable/button2"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="65dp"
        android:layout_marginTop="50dp"
        />
    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:background="@drawable/button2"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="65dp"
        android:layout_marginTop="50dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/signin"
        android:layout_marginTop="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="18sp"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/alreadysigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/already_signed"
            android:textColor="#32CD30"
            android:clickable="true"
            android:textSize="18sp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>