<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity2">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Skip"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="284dp"
        android:textColor="#9C212121"
        android:textSize="14sp"
        android:background="@drawable/textview"
        android:backgroundTint="@color/white"
        />
    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/pic"

        android:src="@drawable/running"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_your_health"
        app:layout_constraintTop_toBottomOf="@id/pic"
        android:layout_marginTop="5dp"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="26dp"

        />
    <TextView
        android:id="@+id/text2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_goneMarginStart="26dp"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="525dp"
        android:textSize="16sp"
        android:layout_marginEnd="24dp"
        android:text="@string/track_your_fitness_here_and_get_diet_chart_accordingly"
        android:lines="2"
        android:textStyle="bold"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/greydot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="677dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/greendot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="45dp"
        android:layout_marginTop="677dp"
        />
    <Button
        android:layout_width="144dp"
        android:layout_height="61dp"
        android:text="@string/get_started"
        android:textSize="12sp"
        android:id="@+id/getstarted"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="680dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="230dp"
        android:background="@drawable/button2"

        />
</androidx.constraintlayout.widget.ConstraintLayout>