<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity1">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Skip"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="284dp"
        android:textColor="#9C212121"
        android:textSize="14sp"
        android:background="@drawable/textview"
        android:backgroundTint="@color/white"
        />
    <ImageView
        android:id="@+id/food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/introfood"
        android:layout_marginTop="94dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/text1"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="474dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/get_super_rich_healthy_diet"
        android:textColor="@color/black"
        android:lines="2"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium"
        />
    <TextView
        android:id="@+id/text2"
        app:layout_constraintTop_toBottomOf="@id/text1"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:text="@string/get_super_rich_food_suggestions_as_per_your_health"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="24dp"
        android:lines="2"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/greendot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="677dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/greydot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="45dp"
        android:layout_marginTop="677dp"
        />
    <Button
        android:id="@+id/next"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/next"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="680dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="290dp"
        android:background="@drawable/button"

        />
</androidx.constraintlayout.widget.ConstraintLayout>