<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage3">


    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/backarrow"
        android:layout_marginTop="54dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/white"
        />
    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="54dp"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="35dp"
        android:hint="Anshuman Pandey"
        android:textSize="24sp"
        />
    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="7dp"
        android:hint="MALE"
        />
    <TextView
        android:id="@+id/greenbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        app:layout_constraintTop_toBottomOf="@id/gender"
        android:layout_marginTop="52dp"
        android:lines="8"
        />
    <ImageView
        android:id="@+id/blood"
        android:layout_width="42dp"
        android:layout_height="42dp"
        app:layout_constraintTop_toTopOf="@id/greenbox"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="71dp"
        android:src="@drawable/bloodgroup"
        />
    <TextView
        android:id="@+id/bloodgrouptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_group"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/blood"
        app:layout_constraintLeft_toRightOf="@id/blood"
        android:layout_marginStart="8dp"
        />
    <TextView
        android:id="@+id/bloodgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bloodgrouptext"
        app:layout_constraintLeft_toRightOf="@id/blood"
        android:layout_marginStart="8dp"
        android:hint="A+"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <ImageView
        android:id="@+id/user"
        android:layout_width="42dp"
        android:layout_height="42dp"
        app:layout_constraintTop_toTopOf="@id/greenbox"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="230dp"
        android:src="@drawable/age"
        />
    <TextView
        android:id="@+id/agetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/user"
        app:layout_constraintLeft_toRightOf="@id/user"
        android:layout_marginStart="8dp"
        />
    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/agetext"
        app:layout_constraintLeft_toRightOf="@id/user"
        android:layout_marginStart="8dp"
        android:hint="19"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/weightbox"
        android:layout_width="135dp"
        android:layout_height="155dp"
        app:layout_constraintTop_toBottomOf="@id/greenbox"
        android:layout_marginTop="25dp"
        android:background="@drawable/textview"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="45dp"
        />
    <LinearLayout
        android:id="@+id/weightlinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@id/weightbox"
        app:layout_constraintRight_toRightOf="@id/weightbox"
        app:layout_constraintTop_toBottomOf="@id/weighttext"
        android:layout_marginTop="8dp"
        >
        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="65"
            android:textSize="24sp"
            android:layout_weight="2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kgs"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            />
    </LinearLayout>
    <Button
        android:id="@+id/weightupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/weightlinear"
        app:layout_constraintLeft_toLeftOf="@id/weightbox"
        app:layout_constraintRight_toRightOf="@id/weightbox"
        android:background="@drawable/button2"
        android:text="Update"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:id="@+id/weighttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weight"
        app:layout_constraintTop_toTopOf="@id/weightbox"
        app:layout_constraintLeft_toLeftOf="@id/weightbox"
        app:layout_constraintRight_toRightOf="@id/weightbox"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/heightbox"
        android:layout_width="135dp"
        android:layout_height="155dp"
        android:background="@drawable/textview"
        app:layout_constraintTop_toBottomOf="@id/greenbox"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="225dp"
        />
    <LinearLayout
        android:id="@+id/heightlinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@id/heightbox"
        app:layout_constraintRight_toRightOf="@id/heightbox"
        app:layout_constraintTop_toBottomOf="@id/heighttext"
        android:layout_marginTop="8dp"
        >
        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_170"
            android:textSize="24sp"
            android:layout_weight="2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cms"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            />

    </LinearLayout>
    <Button
        android:id="@+id/heightupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/heightlinear"
        app:layout_constraintLeft_toLeftOf="@id/heightbox"
        app:layout_constraintRight_toRightOf="@id/heightbox"
        android:background="@drawable/button2"
        android:text="Update"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:id="@+id/heighttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Height"
        app:layout_constraintTop_toTopOf="@id/heightbox"
        app:layout_constraintLeft_toLeftOf="@id/heightbox"
        app:layout_constraintRight_toRightOf="@id/heightbox"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/bmiid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:text="@string/your_bmi"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/greenbox"
        android:layout_marginTop="214dp"
        android:layout_marginHorizontal="98dp"
        />
    <ImageView
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bottombar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="696dp"
        />
    <ImageButton
        android:id="@+id/homebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/home"
        app:layout_constraintTop_toTopOf="@id/bottombar"
        android:layout_marginStart="86dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        android:background="@null"

        />
    <ImageButton
        android:id="@+id/dietbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dieticon"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/bmiid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="53dp"
        />
    <ImageButton
        android:id="@+id/profilebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/userinside"
        android:background="@null"
        app:layout_constraintTop_toTopOf="@id/bottombar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="296dp"
        android:layout_marginTop="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>